# riff

./: .eslintrc.json  .gitignore  .lintstagedrc.mjs  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.husky/: pre-commit
src/: commands.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  media.rs  utils.rs
src/components/: App.tsx  Library.tsx  Nav.tsx  Settings.tsx
src/lib/: media-state.ts  tauri-commands.ts
