[package]
name = "riff"
version = "0.1.0"
description = "a music player"
authors = ["alostsock"]
license = "MIT"
repository = "https://github.com/alostsock/riff"
default-run = "riff"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-open", "fs-read-dir", "fs-read-file", "fs-rename-file", "fs-write-file", "protocol-asset"] }
notify = "4.0.17"
walkdir = "2"
sha-1 = "0.10.0"
base64ct = { version = "1.5.1", features = ["alloc"] }
id3 = "1.2.0"
mp4ameta = "0.11.0"
symphonia = { version = "0.5.1", features = ["mp3", "aac", "isomp4"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
